<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShoeStore</string>
    <string name="Email_Value">Email</string>
    <string name="Password_Value">Password</string>
    <string name="Login_button">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="WelcomeText">Welcome to Mohammed\'s Shoe Store</string>
    <string name="LoginText">Please Enter Email and Password to continue</string>
    <string name="ContinueText">Please press the button to continue</string>
    <string name="Continue">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Instruction_Text">How To Use:\n 1- Press the add button on the bottom right to add the shoe\'s details\n 2- add the shoe\'s details \n3- press the save button to save and display the shoe</string>
    <string name="Thank_You">Thank you for using Mohammed\'s Shoe Store</string>
    <string name="Save_Button">Save</string>
    <string name="Cancel_Button">Cancel</string>
    <string name="Shoe_Name">Shoe Name</string>
    <string name="Company">Company Name</string>
    <string name="Shoe_Size">Shoe Size</string>
    <string name="Description">Description</string>
    <string name="log_out">Log Out</string>

</resources>
