<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
            This layout uses the constraint layout to make sure that each view is exactly where it should be on different screens
            depending on the size of the screen the margins will be the same
             -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Hello">


        <TextView
            android:id="@+id/LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/LoginText"
            android:textColor="@android:color/black"
            android:textSize="@dimen/Welcome_Text_Size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EmailID"
            android:layout_width="@dimen/Login_Width"
            android:layout_height="@dimen/Login_Height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/Email_Value"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/HintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginText"
            />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="@dimen/Login_Width"
            android:layout_height="@dimen/Login_Height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/Password_Value"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="@color/HintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailID"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/Button_Width"
            android:layout_height="@dimen/Button_Height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Sign_up"
            android:textSize="@dimen/Button_Text_Size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LoginButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="@dimen/Button_Width"
            android:layout_height="@dimen/Button_Height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>