<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="Shoe"
            type="com.udacity.shoestore.models.Shoe" />


    </data>

    <LinearLayout

        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="97dp"
                android:layout_height="wrap_content"

                android:text="@string/Shoe_Name" />

            <TextView
                android:id="@+id/shoeName_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:fontFamily="@font/roboto"
                android:text="@={Shoe.name}"

                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/companyname"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Company" />

            <TextView
                android:id="@+id/company_textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"

                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@={Shoe.company}"
                android:textAlignment="viewStart"
                android:textColor="#4CAF50" />

            <TextView
                android:id="@+id/size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight=".25"
                android:fontFamily="@font/roboto"
                android:text="@{Double.toString(Shoe.size)}"
                android:textAlignment="viewEnd" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="174dp"
                android:layout_height="wrap_content"

                android:text="@string/Description" />

            <TextView

                android:id="@+id/shoeDescription_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/roboto"
                android:text="@{Shoe.description}"
                android:textColor="#2B2A2A"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</layout>